client/src/Components/Dashboard/Dashboard.styles.scss
$boxshadow: 0 0 20px 5px rgba(194, 200, 228, 0.4);

.dashboard-content {
    .dashboard-main {
        max-width: 600px;
        margin: auto;
    }

    .recent-content {
        max-width: 600px;
        margin: auto;
        display: flex;
        flex-direction: column;
        grid-gap: 1em;
    }

    .header {
        width: 100%;
        color: black;
        text-align: center;
    }

    .styledHeader {
        strong {
            font-size: 1.5em;
        }
    }
    .title-card {
        background-color: white;
        border-radius: 0.5em;
        box-shadow: $boxshadow;
        padding: 1em;
        text-align: center;
    }
    button {
        width: 250px;
    }
    .link-card {
        .link-body {
            justify-content: center;
            display: grid;
            button {
                width: 100%;
            }
        }
    }
    .infoContainer {
        background-color: white;
        border-radius: 0.5em;
        justify-content: center;
        box-shadow: $boxshadow;
        padding: 1em;
        display: grid;
        margin: auto;
        max-width: 600px;

        .deleteIcon {
            margin: 0 0 0 0;
        }

        .centerThis {
            justify-content: center;
        }
    }
}
.createButton {
    width: 250px !important;
    background-color: rgb(15, 201, 108) !important;
}

